add validation for age and password

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
     }
   </style>
   <body>
-    <app-home></app-home>
+    <app-register></app-register>
+    <!-- <app-home></app-home> -->
     <!-- <app-order></app-order> -->
     <!-- <app-login></app-login> -->
-    <!-- <app-register></app-register> -->
     <!-- <app-detail-product></app-detail-product> -->
   </body>
 </html>
