--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
   </style>
   <body>
     <!-- <app-register></app-register> -->
-    <app-login></app-login>
-    <!-- <app-home></app-home> -->
+    <!-- <app-login></app-login> -->
+    <app-home></app-home>
     <!-- <app-order></app-order> -->
     <!-- <app-detail-product></app-detail-product> -->
   </body>
