code product detail

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
   <body>
     <!-- <app-register></app-register> -->
     <!-- <app-login></app-login> -->
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
     <!-- <app-order></app-order> -->
-    <!-- <app-detail-product></app-detail-product> -->
+    <app-detail-product></app-detail-product>
   </body>
 </html>
