--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <!-- <app-login></app-login> -->
     <!-- <app-home></app-home> -->
     <!-- <app-order></app-order> -->
-    <app-detail-product></app-detail-product>
+    <!-- <app-detail-product></app-detail-product> -->
+     <app-order-confirm></app-order-confirm>
   </body>
 </html>
